Fix overflow in 404.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,10 +99,10 @@ h1 {
     margin-right: 1rem;
 }
 
-.nav-error i {
+.warning-sign i {
     color: #D67D00;
     font-size: 2.3rem;
-    align-self: flex-end;
+    align-self: flex-start;
     text-align: start;
     margin-right: 1rem;
 }
@@ -614,7 +614,7 @@ footer {
         height: 30px;
     }
 
-    .rules {
+    .rules, .warning-sign {
         font-size: 2.4rem;
     }
 
